# pixel-vpn

./: .dockerignore  .gitignore  ANDROID.md  macOS.md  package.json  pnpm-lock.yaml
apps/client/: .env.example  index.html  install-helper.sh  package.json  tsconfig.tsbuildinfo  vite.config.ts
apps/client/PacketTunnelProvider/: Info.plist  PacketTunnelProvider.entitlements  PacketTunnelProvider.swift
apps/client/PrivilegedHelper/: Cargo.toml
apps/client/src/: App.tsx  main.tsx  styles.css  types.ts  vite-env.d.ts
apps/client/src-tauri/: Cargo.toml  tauri.conf.json
apps/client/src-tauri/capabilities/: default.json
apps/client/src-tauri/entitlements/: PacketTunnel.entitlements
apps/client/src-tauri/helper/: pixel-vpn-helper.py  pixel-vpn-helper.sh
apps/client/src-tauri/src/: commands.rs  config.rs  elevation.rs  helper_client.rs  helper_installer.rs  lib.rs  main.rs  server.rs  settings.rs  system_proxy.rs  vpn_plugin.rs  xray.rs
apps/client/src-tauri/src/packet-tunnel/: Cargo.toml  lib.rs
apps/server/: .env.example  package-lock.json  package.json
apps/server/prisma/: schema.prisma  seed.ts
apps/server/src/: config.ts  index.ts
apps/web/: .env.example  LANDINGS-GUIDE.md  LANDINGS.md  THEMES.md  next.config.js  package.json  tailwind.config.ts  tsconfig.tsbuildinfo
apps/web/.next/: app-build-manifest.json  trace
apps/web/app/: globals.css  layout.tsx  manifest.ts  page.tsx  robots.ts  sitemap.ts
apps/web/components/: RefCapture.tsx
docker/: README.md  docker-compose.yml  server.Dockerfile  setup.sh
docker/xray/: config.json
(+256 files in other folders)
