[package]
name = "pixel-vpn-tunnel"
version = "0.1.0"
edition = "2021"

[target.'cfg(target_os = "macos")'.dependencies]
oslog = "0.3"
network-extension = "0.9"
plist = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }

[target.'cfg(target_os = "macos")'.lib]
crate-type = ["staticlib", "cdylib"]

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "z"
strip = true
